add line chart legend

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <div class="col-md-6" id="frequency"></div>
             <div class="col-md-6" id="response"></div>            
           </div>
+          <div id="lineLegend"></div>
         </div>
       </div>
       <p style="float:left">Data Source: <a href="https://data.cityofchicago.org/Service-Requests/311-Service-Requests-Graffiti-Removal/hec5-y4x5"> 311 Service Requests - Graffiti Removal</a></p>
