--- a/hexbin.html
+++ b/hexbin.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-md-6">
           <div id="sliderContainer">
-            <span id="range">2012</span>
+            <span id="range" style="font-size: 18px">2012</span>
             <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/><br>            
           </div>
           <div id="map"></div>
