--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <div id="sliderContainer">
-            <span id="range">2012</span>
-            <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/><br>            
+          <div id="sliderContainer" align="center">
+            <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/><br>
+            <span id="range" style="font-size: 22px; font-family: Prociono; font-weight: bold">2012</span>            
           </div>
           <div id="map"></div>
         </div>
