--- a/hexbin.html
+++ b/hexbin.html
@@ -44,8 +44,8 @@
       <div class="row">
         <div class="col-md-6">
           <div id="sliderContainer" align="center">
-            <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/><br>
-            <span id="range" style="font-size: 22px; font-family: Prociono; font-weight: bold">2012</span>            
+            <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/>
+            <span id="range" style="font-size: 36px; font-family: Prociono">2012</span>            
           </div>
           <div id="map"></div>
         </div>
